<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chron_Stat_Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">Authentification</string>
    <string name="username">Utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="send_login">Envoyer…</string>
    <string name="edit_title">Edition</string>
    <string name="edit_button">Modifier</string>
    <string name="delete_button">Supprimer</string>
    <string name="add_title">Ajout</string>
    <string name="add_button">Ajouter</string>
    <string name="addPerson_button">Ajouter une personne</string>

</resources>
