<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp" >
    
    <!-- Titre d'édition -->
    
    <TextView
        android:id="@+id/textView_editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Champ de texte du nom -->
    
	<EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="text"
        android:maxEms="6"
        android:minEms="6"
        android:textSize="20sp" />
	
	<!-- Champ de texte de l'email -->
	
	<EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:imeOptions="actionSend"
        android:inputType="textEmailAddress"
        android:maxEms="18"
        android:minEms="18"
        android:textSize="20sp" />
	
	<!-- Bouton de confirmation d'édition -->

	<Button
	    android:id="@+id/button_edit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_button" />
	
	<!-- Bouton de suppression -->
	
	<Button
	    android:id="@+id/button_delete"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/delete_button" />
</LinearLayout>
